--- a/[E-03] Camera Sticker.ipynb
+++ b/[E-03] Camera Sticker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9ff1e423",
+   "id": "4e1089ed",
    "metadata": {},
    "source": [
     "# 카메라 스티커"
@@ -15,7 +15,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "11da6b7f",
+   "id": "4a48f3a8",
    "metadata": {},
    "source": [
     "## 1. 이미지 준비하기\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9ad560a",
+   "id": "c64910fe",
    "metadata": {},
    "source": [
     "## 2. 이미지 확인하기\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d311b684",
+   "id": "b63fd2ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "e00ec576",
+   "id": "197c7ea0",
    "metadata": {
     "scrolled": true
    },
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90399dcd",
+   "id": "fdae7e14",
    "metadata": {},
    "source": [
     "### 색 보정해서 출력하기"
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "8b8055bc",
+   "id": "e8947be7",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e5a1222",
+   "id": "68de39a5",
    "metadata": {},
    "source": [
     "### imread의 flag 설명\n",
@@ -160,7 +160,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "75562994",
+   "id": "993ba391",
    "metadata": {},
    "source": [
     "## 3. 얼굴 검출 face detection\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2eec62eb",
+   "id": "a2b16606",
    "metadata": {},
    "source": [
     "### 3.1 detector_hog를 이용해서 사각형 정의하기\n"
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "c3f4125c",
+   "id": "aad55c99",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0700201b",
+   "id": "9d929127",
    "metadata": {},
    "source": [
     "> detector_hog의 두 번째 파라미터는 이미지 피라미드의 수입니다. <br>\n",
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e5393d7",
+   "id": "98834858",
    "metadata": {},
    "source": [
     "### 3.2 찾은 얼굴을 화면에 출력"
@@ -246,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "93116715",
+   "id": "e8dff8f6",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "8e6369a8",
+   "id": "8573a038",
    "metadata": {},
    "source": [
     "## 4. 얼굴 랜드마크 face landmark\n",
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd7fb28a",
+   "id": "23cdfa19",
    "metadata": {},
    "source": [
     "### 4-1 shape_predictor를 이용해 랜드마크 찾기"
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "d718dc25",
+   "id": "f182421d",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "560ce0ef",
+   "id": "93aa31b4",
    "metadata": {},
    "source": [
     "### 4.2 랜드마크를 영상에 출력\n"
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "06de37f8",
+   "id": "273a8e64",
    "metadata": {
     "scrolled": true
    },
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58d23afe",
+   "id": "0d7ae5f4",
    "metadata": {},
    "source": [
     "## 5. 스티커 적용하기"
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "f6fcf09c",
+   "id": "f0fd2282",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "efbb025f",
+   "id": "9a251410",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "63e5ff23",
+   "id": "c5216a79",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
     }
    ],
    "source": [
-    "# 원본 이미지에 스티커 이미지를 추가하기 위해서 x, y 좌표를 조정합니다. 이미지 시작점은 top-left 좌표이기 때문\n",
+    "# 원본 이미지에 스티커 이미지를 추가하기 위해서 x, y 좌표를 조정, 이미지 시작점은 top-left 좌표이기 때문\n",
     "refined_x = x - w // 2\n",
     "refined_y = y - h\n",
     "print ('(x, y) : (%d, %d)'%(refined_x, refined_y))"
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bdc715a",
+   "id": "1499d95b",
    "metadata": {},
    "source": [
     "스티커의 시작점이 얼굴 사진의 영역을 벗어나면 음수로 표현됩니다.<br> \n",
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "179da043",
+   "id": "442a68cb",
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bff223fa",
+   "id": "aa4709d6",
    "metadata": {},
    "source": [
     "sticker_area는 원본이미지에서 스티커를 적용할 위치를 crop한 이미지 입니다. <br>\n",
@@ -557,7 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "fb5d2bd3",
+   "id": "b20037d1",
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "04885515",
+   "id": "69492243",
    "metadata": {
     "scrolled": true
    },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3797d4c7",
+   "id": "09e82fe7",
    "metadata": {},
    "source": [
     "# 고양이 스티커 붙이기\n",
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87ec9c6b",
+   "id": "42d44198",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea512063",
+   "id": "89e80978",
    "metadata": {},
    "source": [
     "## Step 2. 이미지 불러오기\n",
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "60218c8a",
+   "id": "bdcbf06f",
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7350d18",
+   "id": "9c34e353",
    "metadata": {},
    "source": [
     "## Step 3. 얼굴 검출 face detection\n"
@@ -696,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "7eb7e301",
+   "id": "338681c7",
    "metadata": {},
    "outputs": [
     {
@@ -724,8 +724,6 @@
     "detector_hog = dlib.get_frontal_face_detector()\n",
     "\n",
     "# detector_hog를 이용해서 얼굴의 bounding box를 추출\n",
-    "# opencv 의 bgr 이미지를 rgb로 변환\n",
-    "# img_rgb = cv2.cvtColor(img_bgr, cv2.COLOR_BGR2RGB)\n",
     "\n",
     "dlib_rects = detector_hog(img_rgb, 1)   # (image, num of image pyramid)\n",
     "\n",
@@ -746,7 +744,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e27ff028",
+   "id": "f963db2b",
    "metadata": {},
    "source": [
     "## Step 4. 얼굴랜드마크\n",
@@ -756,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "3fe85202",
+   "id": "87e845a2",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f158ae8",
+   "id": "51cac954",
    "metadata": {},
    "source": [
     "### 4.2 랜드마크를 영상에 출력"
@@ -796,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "5c215550",
+   "id": "e2715200",
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7fe4f63",
+   "id": "85bf09bb",
    "metadata": {},
    "source": [
     "## Step 5. 스티커 적용하기"
@@ -834,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "6c7822ab",
+   "id": "205c7fa2",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "efc32535",
+   "id": "3fa948c8",
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "baa4de8e",
+   "id": "5e2723ed",
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "7d2911c8",
+   "id": "eea4775c",
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "9e1f6fa0",
+   "id": "89ff9f98",
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "6ed72d65",
+   "id": "159dfcf3",
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1018,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d3c08fb",
+   "id": "072a55b0",
    "metadata": {},
    "source": [
     "## Step 6. 문제점 찾아보기\n",
@@ -1032,7 +1030,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ec55a3d",
+   "id": "7a53b48b",
    "metadata": {},
    "source": [
     "### 6-1 얼굴의 각도에 따라 스티커가 어떻게 변해야 할까요??"
@@ -1041,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a8b0d7fd",
+   "id": "c40e2ce0",
    "metadata": {},
    "outputs": [
     {
@@ -1153,9 +1151,6 @@
     "detector_hog = dlib.get_frontal_face_detector()\n",
     "\n",
     "# detector_hog를 이용해서 얼굴의 bounding box를 추출\n",
-    "# opencv 의 bgr 이미지를 rgb로 변환\n",
-    "# img_rgb = cv2.cvtColor(img_bgr, cv2.COLOR_BGR2RGB)\n",
-    "\n",
     "dlib_rects = detector_hog(img_rgb, 1)   # (image, num of image pyramid)\n",
     "\n",
     "print(dlib_rects)\n",
@@ -1220,7 +1215,7 @@
     "\n",
     "\n",
     "\n",
-    "# 회전할 좌표\n",
+    "# 회전할 좌표 매트릭스\n",
     "pst1 = np.float32([[landmark[21][0], landmark[21][1]], [landmark[22][0], landmark[21][1]], [landmark[27][0], landmark[27][1]]])\n",
     "pst2 = np.float32([[landmark[21][0], landmark[21][1]], [landmark[22][0], landmark[22][1]], [landmark[27][0], landmark[27][1]]])\n",
     "\n",
@@ -1266,7 +1261,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "6bf20e4a",
+   "id": "ec71650b",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)\n",
@@ -1279,7 +1274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64d49534",
+   "id": "82b65a19",
    "metadata": {},
    "source": [
     "### 6-2 멀리서 촬영하면 왜 안될까요? 옆으로 누워서 촬영하면 왜 안될까요?"
@@ -1288,7 +1283,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "aa773ba2",
+   "id": "a558687f",
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1405,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "03012225",
+   "id": "95b4cd5e",
    "metadata": {},
    "source": [
     "#### 너무 심하게 기울어지니 얼굴을 잘 찾지만.. 랜드마크의 위치가 잡히지 않는다.\n",
@@ -1422,7 +1417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11a86906",
+   "id": "721ee8c0",
    "metadata": {},
    "source": [
     "### 함수정의하기"
@@ -1431,7 +1426,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "41bc4c29",
+   "id": "dc04d5db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1543,19 +1538,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f93902b0",
+   "id": "69ee043a",
    "metadata": {},
    "source": [
     "### 조금 어두운 이미지는 어떻게 될까요?\n",
     "\n",
-    "#### 1. 어두워도 얼굴의 윤곽이 뚜렷하면 수염이 그려진다..\n",
-    "#### 2. 어두운데 얼굴의 윤곽이 뚜렷하지 않으면 얼굴을 찾는 것이 힘들다."
+    "#### 1. 어두워도 얼굴의 윤곽이 뚜렷하면 수염이 그려진다..\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b41f90c7",
+   "id": "d6872e4a",
    "metadata": {},
    "outputs": [
     {
@@ -1638,9 +1632,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ec81e041",
+   "metadata": {},
+   "source": [
+    "#### 2. 어두운데 얼굴의 윤곽이 뚜렷하지 않으면 얼굴을 찾지 못한다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2f4037fa",
+   "id": "f703234f",
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e38b1a36",
+   "id": "ea33df92",
    "metadata": {},
    "source": [
     "## 회고\n",
@@ -1714,8 +1716,8 @@
     "  첫번째 나의 오류는 이미지 합성인데, 다른 곳에서 찾았고,\n",
     "  우여곡절 끝에 addWeight를 찾았더니, 사이즈가 다를 때는 데이터 타입을 명시해 주면 가능하다고 나왔다.\n",
     "  데이터 타입을 명시하면 되는 데.. 어디에 어떻게 해야 하나... 고민을..\n",
-    "  우리 조원 성돈님이 명예의 전당에서 찾으신 방법으로 바꿨다...\n",
-    "  그 분의 이름은 바로~~~ 유현지님이다.\n",
+    "  우리 조원 **박성돈**님이 명예의 전당에서 찾으신 방법으로 바꿨다...\n",
+    "  그 분의 이름은 바로~~~ **유현지**님이다.\n",
     "  좌절감이 들지만.. 알고는 싶었고, 어디에 어떻게 적용하는 지 알고 싶어서.. 배웠다.\n",
     "  후회하지는 않는다.. ㅎㅎ\n",
     "  \n",
@@ -1725,6 +1727,7 @@
     "- addWeight를 찾다보니 여러 가지 연산이 가능하다는 것을 알게 되었다.\n",
     "- 성돈님의 도움을 받아서 해보니 원본 출력할 때, 데이터 타입이 명시가 되어 있었다.. ㅎㅎ\n",
     "- 기울어진 얼굴을 할 때는 getAffineTransform()을 썼는 데, 깨끗하지 않게 되었다.\n",
+    "   - 그래도 내가 알아내서 하니 기분은 좋다~!!^^\n",
     "\n",
     "\n",
     "#### 2.2 아직 모호한 점\n",
@@ -1753,7 +1756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "126fb55e",
+   "id": "edc63ecd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1761,7 +1764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "337a58f5",
+   "id": "7134905d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1769,7 +1772,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0260c567",
+   "id": "400c8b35",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1777,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f44a5777",
+   "id": "b6c13338",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1785,7 +1788,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbd5e0de",
+   "id": "367aa40a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1793,7 +1796,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e14f4c78",
+   "id": "94261708",
    "metadata": {},
    "outputs": [],
    "source": []
