--- a/[E-09] Chest_xray_final.ipynb
+++ b/[E-09] Chest_xray_final.ipynb
@@ -40,7 +40,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "20e671ec",
+   "id": "d1ace190",
    "metadata": {},
    "source": [
     "## 1. **들어가며**\n",
@@ -259,10 +259,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6453ef3",
+   "id": "ded5a6d1",
    "metadata": {},
    "source": [
-    "## 1. Chest_xray\n",
+    "## Chest_xray\n",
     "\n",
     "### **1. Set-up**\n",
     "\n",
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "279d1060",
+   "id": "717e5bc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf66edbd",
+   "id": "b319fcef",
    "metadata": {},
    "source": [
     "**필요한 변수들 생성**\n",
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "25bf9174",
+   "id": "351c1d70",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "3a6adf76",
+   "id": "436ca985",
    "metadata": {},
    "source": [
     "###  **Step 2. 데이터 가져오기**\n",
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d104a57c",
+   "id": "c1942f3e",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72d78acf",
+   "id": "5e253ac5",
    "metadata": {},
    "source": [
     "**train과 val에 있는 데이터를 모은 다음에 train : val를 80:20으로 분할**"
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6dbf2b60",
+   "id": "87090a48",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0766218f",
+   "id": "279f456f",
    "metadata": {},
    "source": [
     "**파일 경로에 힌트로 정상 이미지와 폐렴 이미지를 구분**"
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f4f7b52f",
+   "id": "8946dcc6",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8e5c312",
+   "id": "10d28870",
    "metadata": {},
    "source": [
     "**NORMAL, PNEUMONIA를 이용해 파일 개수 확인**"
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bd8936e2",
+   "id": "eeaceb1a",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a3f867c",
+   "id": "65e7b4cd",
    "metadata": {},
    "source": [
     "**tf.data 인스턴스를 만들기**\n",
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6f81b040",
+   "id": "4aaff42e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00c29252",
+   "id": "a4dce63d",
    "metadata": {},
    "source": [
     "**Train 데이터셋, validation 데이터셋 개수 확인 → val data를 합쳐서 나누는 듯**\n",
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4d9caacb",
+   "id": "3c6fec32",
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f94954a4",
+   "id": "8447266b",
    "metadata": {},
    "source": [
     "**라벨 데이터를 만들어 주는 함수를 만들기**"
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e3e160c7",
+   "id": "5c282d41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f5f0c03",
+   "id": "17e9c024",
    "metadata": {},
    "source": [
     "**이미지 형식 바꾸기, 이미지와 라벨을 읽어오는 함수 만들기**"
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c4f6e5c7",
+   "id": "54730a4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8c0dd50",
+   "id": "f2cea74c",
    "metadata": {},
    "source": [
     "**train 데이터 셋과 validation 데이터 셋을 만들기**\n",
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b517ccc4",
+   "id": "ee1bfd0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cebe759",
+   "id": "e2f14bcc",
    "metadata": {},
    "source": [
     "**한 개 데이터셋으로 이미지, 라벨링 확인**"
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5422666f",
+   "id": "81be9a85",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27531872",
+   "id": "34c83504",
    "metadata": {},
    "source": [
     "**test 데이터셋 만들기**"
@@ -657,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ff9fa4c1",
+   "id": "b9d8dc36",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6a63828",
+   "id": "f2fcc743",
    "metadata": {},
    "source": [
     "### **Tensorflow에서는 tf.data 파이프라인을 사용해서 학습 데이터를 효율적으로 사용할 수 있도록 지원**\n",
@@ -700,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "94f00898",
+   "id": "b583588b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8be30d89",
+   "id": "40f48b83",
    "metadata": {},
    "source": [
     "### **Step 3. 데이터 시각화**\n",
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "32656917",
+   "id": "f98a90f4",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f2d2208",
+   "id": "273f2ad4",
    "metadata": {},
    "source": [
     "### **Step 4. 데이터 imbalance 처리**\n",
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "47895f7e",
+   "id": "9d76f8b7",
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb9f2165",
+   "id": "3af7bc3e",
    "metadata": {},
    "source": [
     "### **Step 5. CNN 모델링**\n",
@@ -837,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "29b96428",
+   "id": "13c090fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb465d19",
+   "id": "33d1de9a",
    "metadata": {},
    "source": [
     "**Dense Block 만들기**"
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "92353e48",
+   "id": "54cc6773",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fd5df5f",
+   "id": "00606ba1",
    "metadata": {},
    "source": [
     "📌 **Batch Normalization과 Dropout 두 가지 regularization 기법이 동시에 사용에 대한 의견**\n",
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "141ff7c8",
+   "id": "2b6f2e26",
    "metadata": {},
    "source": [
     "**모델 완성**"
@@ -903,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "68441e46",
+   "id": "ae584943",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c58d4876",
+   "id": "143d71d3",
    "metadata": {},
    "source": [
     "### **Step 6. 모델 훈련**\n",
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "246d6978",
+   "id": "c37d324d",
    "metadata": {},
    "source": [
     "**모델 compile**"
@@ -965,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "05cab988",
+   "id": "9ff3892f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a4ad98e",
+   "id": "4004a2a8",
    "metadata": {},
    "source": [
     "**모델 학습**\n",
@@ -998,7 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4999a5b3",
+   "id": "68e6b28b",
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20870ff8",
+   "id": "2a3e0e1f",
    "metadata": {},
    "source": [
     "### ****7. 결과 확인****\n",
@@ -1066,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "bfcdc212",
+   "id": "77c8ee0d",
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf006658",
+   "id": "63a87c4c",
    "metadata": {},
    "source": [
     "**keras.callbacks.ModelCheckpoint를 이용해 저장된 best 모델 불러오기**"
@@ -1107,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "6ba11940",
+   "id": "3c6ec7f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,7 +1116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb3c7fab",
+   "id": "e8cf18e5",
    "metadata": {},
    "source": [
     "**best모델로 평가 후 loss, accuracy, precision, recall 값을 출력**"
@@ -1125,7 +1125,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "120f2450",
+   "id": "6b498954",
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5366ff6a",
+   "id": "e6106f0a",
    "metadata": {},
    "source": [
     "**의료 데이터의 경우 구하기도 어렵고 구하더라도 데이터가 작은 경우가 많아서 이를 해결하기 위해 Data augmentation 방법을 많이 시도**\n",
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deca9fba",
+   "id": "dfcda853",
    "metadata": {},
    "source": [
     "## 회고\n",
