--- a/[E-09] Chest_xray_final.ipynb
+++ b/[E-09] Chest_xray_final.ipynb
@@ -40,9 +40,11 @@
     }
    },
    "cell_type": "markdown",
-   "id": "d1ace190",
+   "id": "2354321e",
    "metadata": {},
    "source": [
+    "# Chest_xray\n",
+    "\n",
     "## 1. **들어가며**\n",
     "\n",
     "![image.png](attachment:image.png)\n",
@@ -259,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ded5a6d1",
+   "id": "229e4388",
    "metadata": {},
    "source": [
     "## Chest_xray\n",
@@ -274,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "717e5bc1",
+   "id": "9e3cdeeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b319fcef",
+   "id": "cb6c8980",
    "metadata": {},
    "source": [
     "**필요한 변수들 생성**\n",
@@ -302,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "351c1d70",
+   "id": "ef5bcefa",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +342,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "436ca985",
+   "id": "6235f379",
    "metadata": {},
    "source": [
     "###  **Step 2. 데이터 가져오기**\n",
@@ -357,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c1942f3e",
+   "id": "07f42865",
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e253ac5",
+   "id": "956a670a",
    "metadata": {},
    "source": [
     "**train과 val에 있는 데이터를 모은 다음에 train : val를 80:20으로 분할**"
@@ -392,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "87090a48",
+   "id": "3e967c58",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "279f456f",
+   "id": "331d99d7",
    "metadata": {},
    "source": [
     "**파일 경로에 힌트로 정상 이미지와 폐렴 이미지를 구분**"
@@ -432,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8946dcc6",
+   "id": "ade110d6",
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10d28870",
+   "id": "73004269",
    "metadata": {},
    "source": [
     "**NORMAL, PNEUMONIA를 이용해 파일 개수 확인**"
@@ -463,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "eeaceb1a",
+   "id": "be4a1c0c",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65e7b4cd",
+   "id": "6c83a20f",
    "metadata": {},
    "source": [
     "**tf.data 인스턴스를 만들기**\n",
@@ -498,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4aaff42e",
+   "id": "2dc00de7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4dce63d",
+   "id": "215bfeca",
    "metadata": {},
    "source": [
     "**Train 데이터셋, validation 데이터셋 개수 확인 → val data를 합쳐서 나누는 듯**\n",
@@ -520,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3c6fec32",
+   "id": "10ed3f70",
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8447266b",
+   "id": "0721a588",
    "metadata": {},
    "source": [
     "**라벨 데이터를 만들어 주는 함수를 만들기**"
@@ -552,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5c282d41",
+   "id": "b7f407ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17e9c024",
+   "id": "4197929d",
    "metadata": {},
    "source": [
     "**이미지 형식 바꾸기, 이미지와 라벨을 읽어오는 함수 만들기**"
@@ -574,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "54730a4a",
+   "id": "b8a4e2cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2cea74c",
+   "id": "a8c7a981",
    "metadata": {},
    "source": [
     "**train 데이터 셋과 validation 데이터 셋을 만들기**\n",
@@ -607,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ee1bfd0a",
+   "id": "d81c0855",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2f14bcc",
+   "id": "0c451d67",
    "metadata": {},
    "source": [
     "**한 개 데이터셋으로 이미지, 라벨링 확인**"
@@ -627,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "81be9a85",
+   "id": "e35821f6",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34c83504",
+   "id": "c5902392",
    "metadata": {},
    "source": [
     "**test 데이터셋 만들기**"
@@ -657,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b9d8dc36",
+   "id": "1d1840e0",
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2fcc743",
+   "id": "cf99b7fd",
    "metadata": {},
    "source": [
     "### **Tensorflow에서는 tf.data 파이프라인을 사용해서 학습 데이터를 효율적으로 사용할 수 있도록 지원**\n",
@@ -700,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b583588b",
+   "id": "9b15b1e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40f48b83",
+   "id": "e3b4d4d5",
    "metadata": {},
    "source": [
     "### **Step 3. 데이터 시각화**\n",
@@ -733,7 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f98a90f4",
+   "id": "260bdabf",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +771,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "273f2ad4",
+   "id": "6b7ad97c",
    "metadata": {},
    "source": [
     "### **Step 4. 데이터 imbalance 처리**\n",
@@ -793,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9d76f8b7",
+   "id": "743bbde1",
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3af7bc3e",
+   "id": "12e0f599",
    "metadata": {},
    "source": [
     "### **Step 5. CNN 모델링**\n",
@@ -837,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "13c090fb",
+   "id": "70c4e4d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33d1de9a",
+   "id": "794a6d54",
    "metadata": {},
    "source": [
     "**Dense Block 만들기**"
@@ -864,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "54cc6773",
+   "id": "d86da9f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +883,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00606ba1",
+   "id": "910b6320",
    "metadata": {},
    "source": [
     "📌 **Batch Normalization과 Dropout 두 가지 regularization 기법이 동시에 사용에 대한 의견**\n",
@@ -894,7 +896,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b6f2e26",
+   "id": "2cb12728",
    "metadata": {},
    "source": [
     "**모델 완성**"
@@ -903,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ae584943",
+   "id": "9cafa6a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "143d71d3",
+   "id": "c5d0be53",
    "metadata": {},
    "source": [
     "### **Step 6. 모델 훈련**\n",
@@ -956,7 +958,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c37d324d",
+   "id": "87c3e934",
    "metadata": {},
    "source": [
     "**모델 compile**"
@@ -965,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9ff3892f",
+   "id": "edfa381f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +990,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4004a2a8",
+   "id": "8fdf93d8",
    "metadata": {},
    "source": [
     "**모델 학습**\n",
@@ -998,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "68e6b28b",
+   "id": "fac350be",
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1055,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a3e0e1f",
+   "id": "9cfaff9d",
    "metadata": {},
    "source": [
     "### ****7. 결과 확인****\n",
@@ -1066,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "77c8ee0d",
+   "id": "ca15339c",
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63a87c4c",
+   "id": "a4dec137",
    "metadata": {},
    "source": [
     "**keras.callbacks.ModelCheckpoint를 이용해 저장된 best 모델 불러오기**"
@@ -1107,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3c6ec7f8",
+   "id": "4c2e872e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,7 +1118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8cf18e5",
+   "id": "091e1fff",
    "metadata": {},
    "source": [
     "**best모델로 평가 후 loss, accuracy, precision, recall 값을 출력**"
@@ -1125,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "6b498954",
+   "id": "3817a500",
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6106f0a",
+   "id": "728ea3f6",
    "metadata": {},
    "source": [
     "**의료 데이터의 경우 구하기도 어렵고 구하더라도 데이터가 작은 경우가 많아서 이를 해결하기 위해 Data augmentation 방법을 많이 시도**\n",
@@ -1163,7 +1165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfcda853",
+   "id": "7c41a4d0",
    "metadata": {},
    "source": [
     "## 회고\n",
@@ -1172,6 +1174,7 @@
     "- 기본적으로 제공하는 코드가 좋아서 어려웠던 점은 없었다....\n",
     "\n",
     "### 프로젝트를 진행하면서 알아낸 점\n",
+    "- x_ray, CT, MRI에 대해 조금 알게됨..\n",
     "- GPU를 사용하면서 모델 훈련을 하는 것\n",
     "- imbalance한 데이터를 해결하는 방법으로 Weight balancing이라는 테크닉이 사용\n",
     "- Convolution block, Dense Block을 만들어 다양한 방법으로 모델링 가능\n",
