--- a/[E-09] Chest_xray_final.ipynb
+++ b/[E-09] Chest_xray_final.ipynb
@@ -40,7 +40,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "2354321e",
+   "id": "16adb2a6",
    "metadata": {},
    "source": [
     "# Chest_xray\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "229e4388",
+   "id": "2829e8c5",
    "metadata": {},
    "source": [
     "## Chest_xray\n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9e3cdeeb",
+   "id": "48f2dd56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb6c8980",
+   "id": "bf453a9b",
    "metadata": {},
    "source": [
     "**필요한 변수들 생성**\n",
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ef5bcefa",
+   "id": "a1ef7637",
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "6235f379",
+   "id": "c43870e1",
    "metadata": {},
    "source": [
     "###  **Step 2. 데이터 가져오기**\n",
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "07f42865",
+   "id": "0dbfd483",
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "956a670a",
+   "id": "ed647015",
    "metadata": {},
    "source": [
     "**train과 val에 있는 데이터를 모은 다음에 train : val를 80:20으로 분할**"
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3e967c58",
+   "id": "47e9f9cf",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "331d99d7",
+   "id": "79ee7e1f",
    "metadata": {},
    "source": [
     "**파일 경로에 힌트로 정상 이미지와 폐렴 이미지를 구분**"
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ade110d6",
+   "id": "abb67cac",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73004269",
+   "id": "30eb80e8",
    "metadata": {},
    "source": [
     "**NORMAL, PNEUMONIA를 이용해 파일 개수 확인**"
@@ -465,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "be4a1c0c",
+   "id": "3085d660",
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c83a20f",
+   "id": "4c7d9af2",
    "metadata": {},
    "source": [
     "**tf.data 인스턴스를 만들기**\n",
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2dc00de7",
+   "id": "30a25c7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "215bfeca",
+   "id": "96f61b23",
    "metadata": {},
    "source": [
     "**Train 데이터셋, validation 데이터셋 개수 확인 → val data를 합쳐서 나누는 듯**\n",
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "10ed3f70",
+   "id": "9eb23fa6",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0721a588",
+   "id": "1b45ef71",
    "metadata": {},
    "source": [
     "**라벨 데이터를 만들어 주는 함수를 만들기**"
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b7f407ff",
+   "id": "e9ce96c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4197929d",
+   "id": "c3ca5a08",
    "metadata": {},
    "source": [
     "**이미지 형식 바꾸기, 이미지와 라벨을 읽어오는 함수 만들기**"
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b8a4e2cf",
+   "id": "d40946e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8c7a981",
+   "id": "83f0872c",
    "metadata": {},
    "source": [
     "**train 데이터 셋과 validation 데이터 셋을 만들기**\n",
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d81c0855",
+   "id": "6723feb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c451d67",
+   "id": "437f63aa",
    "metadata": {},
    "source": [
     "**한 개 데이터셋으로 이미지, 라벨링 확인**"
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e35821f6",
+   "id": "70347110",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5902392",
+   "id": "e3885f79",
    "metadata": {},
    "source": [
     "**test 데이터셋 만들기**"
@@ -659,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1d1840e0",
+   "id": "535f9f79",
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf99b7fd",
+   "id": "475a3939",
    "metadata": {},
    "source": [
     "### **Tensorflow에서는 tf.data 파이프라인을 사용해서 학습 데이터를 효율적으로 사용할 수 있도록 지원**\n",
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9b15b1e6",
+   "id": "232c8c6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,22 +720,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3b4d4d5",
+   "id": "54b55079",
    "metadata": {},
    "source": [
     "### **Step 3. 데이터 시각화**\n",
     "\n",
     "---\n",
     "\n",
-    "- **rain에 있는 batch 중 첫 번째 배치를 추출**\n",
+    "- **train에 있는 batch 중 첫 번째 배치를 추출**\n",
     "- **추출된 배치를 image와 label 데이터 셋으로 나누기**\n",
-    "- **show_batch() 함수를 이용해서 결과 사진을 보**"
+    "- **show_batch() 함수를 이용해서 결과 사진을 보기**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "260bdabf",
+   "id": "63b98401",
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b7ad97c",
+   "id": "841a2725",
    "metadata": {},
    "source": [
     "### **Step 4. 데이터 imbalance 처리**\n",
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "743bbde1",
+   "id": "1f4c6f7e",
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12e0f599",
+   "id": "7355b389",
    "metadata": {},
    "source": [
     "### **Step 5. CNN 모델링**\n",
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "70c4e4d5",
+   "id": "3cc9e27c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "794a6d54",
+   "id": "31ea17b3",
    "metadata": {},
    "source": [
     "**Dense Block 만들기**"
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d86da9f0",
+   "id": "c269177d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "910b6320",
+   "id": "2d70aa5f",
    "metadata": {},
    "source": [
     "📌 **Batch Normalization과 Dropout 두 가지 regularization 기법이 동시에 사용에 대한 의견**\n",
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cb12728",
+   "id": "479fc736",
    "metadata": {},
    "source": [
     "**모델 완성**"
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9cafa6a5",
+   "id": "7a009ecf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5d0be53",
+   "id": "2b2df3ca",
    "metadata": {},
    "source": [
     "### **Step 6. 모델 훈련**\n",
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87c3e934",
+   "id": "55d08a5f",
    "metadata": {},
    "source": [
     "**모델 compile**"
@@ -967,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "edfa381f",
+   "id": "798d1f10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fdf93d8",
+   "id": "1c306554",
    "metadata": {},
    "source": [
     "**모델 학습**\n",
@@ -1000,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fac350be",
+   "id": "5df638e4",
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cfaff9d",
+   "id": "6e71a94b",
    "metadata": {},
    "source": [
     "### ****7. 결과 확인****\n",
@@ -1068,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ca15339c",
+   "id": "49b4b5ed",
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4dec137",
+   "id": "5dfa009a",
    "metadata": {},
    "source": [
     "**keras.callbacks.ModelCheckpoint를 이용해 저장된 best 모델 불러오기**"
@@ -1109,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4c2e872e",
+   "id": "71591d0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "091e1fff",
+   "id": "82746632",
    "metadata": {},
    "source": [
     "**best모델로 평가 후 loss, accuracy, precision, recall 값을 출력**"
@@ -1127,7 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "3817a500",
+   "id": "ebb06bae",
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "728ea3f6",
+   "id": "7c8eaa57",
    "metadata": {},
    "source": [
     "**의료 데이터의 경우 구하기도 어렵고 구하더라도 데이터가 작은 경우가 많아서 이를 해결하기 위해 Data augmentation 방법을 많이 시도**\n",
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c41a4d0",
+   "id": "15464a97",
    "metadata": {},
    "source": [
     "## 회고\n",
