--- a/[E-12] 한국어 데이터로 챗봇 만들기.ipynb
+++ b/[E-12] 한국어 데이터로 챗봇 만들기.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e678e16e",
+   "id": "0b1f7d9b",
    "metadata": {},
    "source": [
     "# [E-12] 한국어 데이터로 챗봇 만들기\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "96d32ffa",
+   "id": "c85f2751",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "459c9fdf",
+   "id": "5dc3d37e",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e7e0b8b9",
+   "id": "4e99ba6d",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e6f68dac",
+   "id": "4e854348",
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e712a4e1",
+   "id": "26ccbc6a",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b59fb33f",
+   "id": "348abe68",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fb33162",
+   "id": "7768c3b6",
    "metadata": {},
    "source": [
     "## Step 2. 데이터 전처리하기"
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "13fc9e02",
+   "id": "12773da8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7adcb925",
+   "id": "2e30d6ce",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82ce34c5",
+   "id": "f6e8c327",
    "metadata": {},
    "source": [
     "## Step 3. SubwordTextEncoder 사용하기"
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1fc2e2a",
+   "id": "5ebbd922",
    "metadata": {},
    "source": [
     "### 3.1 단어장 만들기"
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1c7e897e",
+   "id": "5060819c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bc1e37b5",
+   "id": "f56ce318",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "859e145e",
+   "id": "ff19165d",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d325e86",
+   "id": "a55742c7",
    "metadata": {},
    "source": [
     "### 3.2 정수 인코딩과 패딩"
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "43878204",
+   "id": "c03e30f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "08a9662e",
+   "id": "f0b15005",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "37271bf4",
+   "id": "3424f771",
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "6cf74019",
+   "id": "68353d0c",
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77cbb7e9",
+   "id": "f705b152",
    "metadata": {},
    "source": [
     "###  3.3 인코더와 디코더의 입력, 그리고 레이블 만들기\n",
@@ -636,12 +636,12 @@
     "<br>\n",
     "\n",
     ">**answers의 한 샘플이 다음과 같았다고 해봅시다.  \n",
-    "샘플 : '\\<START_TOKEN> I AM A STUDENT \\<END_TOKEN> \\<PAD> \\<PAD> \\<PAD> \\<PAD>'  \n",
-    ">\\<START_TOKEN>은 문장의 시작을 의미하는 시작 토큰, \\<END_TOKEN>은 문장의 끝을 의미하는 종료 토큰 \\<PAD>는 패딩을 위해 사용되는 패딩 토큰입니다.  \n",
+    "샘플 : '\\<START_TOKEN\\> I AM A STUDENT \\<END_TOKEN\\> \\<PAD\\> \\<PAD\\> \\<PAD\\> \\<PAD\\>'  \n",
+    ">\\<START_TOKEN\\>은 문장의 시작을 의미하는 시작 토큰, \\<END_TOKEN>은 문장의 끝을 의미하는 종료 토큰 \\<PAD>는 패딩을 위해 사용되는 패딩 토큰입니다.  \n",
     ">교사 강요를 적용하기 위해서 위 샘플을 디코더의 입력과 레이블로 사용한다고 하였을 때,  \n",
     "    각각 어떻게 수정해서 입력과 레이블로 사용해야 할까요?**\n",
-    ">- **입력 : \\<START_TOKEN> I AM A STUDENT \\<END_TOKEN> \\<PAD> \\<PAD> \\<PAD>**\n",
-    ">- **레이블 : I AM A STUDENT \\<END_TOKEN> \\<PAD> \\<PAD> \\<PAD> \\<PAD>**\n",
+    ">- **입력 : \\<START_TOKEN\\> I AM A STUDENT \\<END_TOKEN\\> \\<PAD> \\<PAD\\> \\<PAD\\>**\n",
+    ">- **레이블 : I AM A STUDENT \\<END_TOKEN\\> \\<PAD\\> \\<PAD> \\<PAD\\> \\<PAD\\>**\n",
     "\n",
     "<br>\n",
     "\n",
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "abfe3ee4",
+   "id": "bdf7ad27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +697,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "55cf9f0a",
+   "id": "e7fbdae3",
    "metadata": {},
    "source": [
     "## Step 4. Transformer 모델 구성하기\n",
@@ -730,7 +730,6 @@
     "PE_{(pos,~2i+1)} = cos\\left(\\frac{pos}{10000}^{\\frac{2i}{d_{model}}}\\right)\n",
     "$$\n",
     "\n",
-    "$$ E=mc^2 $$\n",
     "\n",
     "**수식의 용어 설명**\n",
     "\n",
@@ -794,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6fbeb5ca",
+   "id": "cc220dc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8c85efa9",
+   "id": "7c04a2ba",
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +884,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "bfdafcbd",
+   "id": "d8040bde",
    "metadata": {},
    "source": [
     "## 4.2 인코더\n",
@@ -1034,7 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8571c831",
+   "id": "1beadab9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1068,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "d757c3b0",
+   "id": "d48a4cd2",
    "metadata": {},
    "source": [
     "\n",
@@ -1120,7 +1119,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "11c92cb2",
+   "id": "0e0ea9a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1181,7 +1180,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "e92e4f1e",
+   "id": "164a07cb",
    "metadata": {},
    "source": [
     "### **4.2.7 마스킹**\n",
@@ -1220,7 +1219,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b23300db",
+   "id": "4bbcdea7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1237,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "67657181",
+   "id": "90606c91",
    "metadata": {},
    "source": [
     "### 4.2.7.2 룩 어헤드 마스킹(Look-ahead masking, 다음 단어 가리기)\n",
@@ -1269,7 +1268,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3f50148b",
+   "id": "0ae5f564",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,7 +1290,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "4054b60b",
+   "id": "91fa2df1",
    "metadata": {},
    "source": [
     "## 4.2.8. 인코더\n",
@@ -1314,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "db528476",
+   "id": "c668f2b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1347,7 +1346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb392744",
+   "id": "0e04bf4e",
    "metadata": {},
    "source": [
     "### **4.2.8.2 인코더 층을 쌓아 인코더 만들기**\n",
@@ -1365,7 +1364,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "32052455",
+   "id": "4e511386",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1406,7 +1405,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "f6d9b24b",
+   "id": "52a1e814",
    "metadata": {},
    "source": [
     "## 4. 3디코더\n",
@@ -1436,7 +1435,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "0e062c3e",
+   "id": "42350ff0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1478,7 +1477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fd63f8b",
+   "id": "9eca059c",
    "metadata": {},
    "source": [
     "\n",
@@ -1495,7 +1494,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "79e1769f",
+   "id": "1ddc7b64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1530,7 +1529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77957df3",
+   "id": "6c723d8e",
    "metadata": {},
    "source": [
     "### 4.4 인코더 , 디코더 함수를 이용해 Transformer 함수 정의"
@@ -1539,7 +1538,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "29c2a79f",
+   "id": "f41204d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1582,7 +1581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8046eb2",
+   "id": "1ce4620f",
    "metadata": {},
    "source": [
     "### 4.5 Transformer 모델 생성"
@@ -1591,7 +1590,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "e9dd98ea",
+   "id": "3937ccd7",
    "metadata": {},
    "outputs": [
     {
@@ -1652,7 +1651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "678e5aaf",
+   "id": "af73a322",
    "metadata": {},
    "source": [
     "### 4.6 손실 함수(Loss function)\n",
@@ -1662,7 +1661,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "ad6a6b75",
+   "id": "92c6f094",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1680,7 +1679,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c9221a3",
+   "id": "3e03e75d",
    "metadata": {},
    "source": [
     "### 4.7 커스텀 된 학습률(Learning rate)\n",
@@ -1705,7 +1704,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e36abf7f",
+   "id": "e04bf6a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1729,7 +1728,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bc4ccf1",
+   "id": "28e96816",
    "metadata": {},
    "source": [
     "### 4.7.1 커스텀 된 학습률(Learning rate) 시각화"
@@ -1738,7 +1737,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "42de931e",
+   "id": "75dd0fcf",
    "metadata": {},
    "outputs": [
     {
@@ -1775,7 +1774,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "467b7754",
+   "id": "bdaae139",
    "metadata": {},
    "source": [
     "### 4.8 모델 컴파일\n",
@@ -1785,7 +1784,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "31824765",
+   "id": "ef610e00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1803,7 +1802,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "550744f9",
+   "id": "636c3c81",
    "metadata": {},
    "source": [
     "### 4.9 훈련"
@@ -1812,7 +1811,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "08b151cc",
+   "id": "c2d38243",
    "metadata": {},
    "outputs": [
     {
@@ -1940,7 +1939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e6f3f76",
+   "id": "fe9272c1",
    "metadata": {},
    "source": [
     "## **Step 5. 모델 평가 하기**\n",
@@ -1961,7 +1960,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "5ecba3cf",
+   "id": "9e4c3ccb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1974,7 +1973,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eb10081",
+   "id": "154b7b92",
    "metadata": {},
    "source": [
     "### 5.2 decoder_inference()함수를 만들기"
@@ -1983,7 +1982,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "de9f1f59",
+   "id": "df881bd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2021,7 +2020,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9a2779a",
+   "id": "6d618302",
    "metadata": {},
    "source": [
     "### 5.3 sentence_generation()함수 구현\n",
@@ -2031,7 +2030,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "7ee2a3af",
+   "id": "86b4bfe8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2051,7 +2050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "992f6a69",
+   "id": "c4fff153",
    "metadata": {},
    "source": [
     "### 5.4 챗봇 테스트"
@@ -2060,7 +2059,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "490a8905",
+   "id": "70b8e568",
    "metadata": {},
    "outputs": [
     {
@@ -2090,7 +2089,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "41758405",
+   "id": "b4c3dc82",
    "metadata": {},
    "outputs": [
     {
@@ -2120,7 +2119,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "08c10411",
+   "id": "3361b762",
    "metadata": {},
    "outputs": [
     {
@@ -2150,7 +2149,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "973d0320",
+   "id": "ae5cf9ee",
    "metadata": {},
    "outputs": [
     {
@@ -2180,7 +2179,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "73c6c4ef",
+   "id": "64ab8a53",
    "metadata": {},
    "outputs": [
     {
@@ -2209,7 +2208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce04ca48",
+   "id": "b61ced7f",
    "metadata": {},
    "source": [
     "생각보다 그리 좋은 답변이 아니라서.. 다시 도전"
@@ -2217,7 +2216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44ee1b80",
+   "id": "4398f3b7",
    "metadata": {},
    "source": [
     "## Step6 - 6 layer, $ d_{model} = 512 $, max_len = 21\n",
@@ -2227,7 +2226,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "87772840",
+   "id": "1b51a278",
    "metadata": {},
    "outputs": [
     {
@@ -2350,7 +2349,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "6a6f87ce",
+   "id": "74259e41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2374,7 +2373,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "29820102",
+   "id": "b28455ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2392,7 +2391,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "4e5e0e8c",
+   "id": "a3f91478",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2425,7 +2424,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "c115a6aa",
+   "id": "ada0cd75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2452,7 +2451,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "79dacfe9",
+   "id": "15566a76",
    "metadata": {},
    "outputs": [
     {
@@ -2514,7 +2513,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "578ee8c6",
+   "id": "6d7b1db3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2524,7 +2523,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "781423af",
+   "id": "eae59a7f",
    "metadata": {},
    "outputs": [
     {
@@ -2653,7 +2652,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "2bc7db48",
+   "id": "506b6a9a",
    "metadata": {},
    "outputs": [
     {
@@ -2683,7 +2682,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "fff820e9",
+   "id": "279897fd",
    "metadata": {
     "scrolled": true
    },
@@ -2715,7 +2714,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "cbf0a2f7",
+   "id": "9eb0134c",
    "metadata": {},
    "outputs": [
     {
@@ -2745,7 +2744,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "a7265850",
+   "id": "31747d95",
    "metadata": {},
    "outputs": [
     {
@@ -2775,7 +2774,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "313b1a19",
+   "id": "a4821a61",
    "metadata": {
     "scrolled": true
    },
@@ -2806,7 +2805,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47d52e65",
+   "id": "e8951334",
    "metadata": {},
    "source": [
     "답변이 왔다갔다 하는 듯..  accuracy가 너무 안좋다.. loss는 너무 크다\n",
@@ -2817,7 +2816,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "1eddc32e",
+   "id": "7d6becfd",
    "metadata": {},
    "outputs": [
     {
@@ -2905,7 +2904,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "59b4add9",
+   "id": "dba9889e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2929,7 +2928,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "9a2f4dbc",
+   "id": "5526703a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2947,7 +2946,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "b6eac460",
+   "id": "7b9a0322",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2980,7 +2979,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "61b48cb9",
+   "id": "54d88084",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3007,7 +3006,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "8699a9e0",
+   "id": "dfcf0563",
    "metadata": {},
    "outputs": [
     {
@@ -3069,7 +3068,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "052a6c32",
+   "id": "c5aa9554",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3079,7 +3078,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "053a63e3",
+   "id": "42ef0b37",
    "metadata": {},
    "outputs": [
     {
@@ -3208,7 +3207,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "98f57e03",
+   "id": "954b415f",
    "metadata": {},
    "outputs": [
     {
@@ -3238,7 +3237,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "1d4f290a",
+   "id": "1c3c91fe",
    "metadata": {
     "scrolled": true
    },
@@ -3270,7 +3269,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "2688a67d",
+   "id": "1790c9b7",
    "metadata": {},
    "outputs": [
     {
@@ -3300,7 +3299,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "aee19efc",
+   "id": "8e004173",
    "metadata": {},
    "outputs": [
     {
@@ -3330,7 +3329,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "b764b25d",
+   "id": "b5304115",
    "metadata": {
     "scrolled": true
    },
@@ -3361,7 +3360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "372e285e",
+   "id": "aea0e5f8",
    "metadata": {},
    "source": [
     "## 회고\n",
@@ -3378,7 +3377,7 @@
     "    - 수식 정리\n",
     "    \n",
     "- 아직 모호한 점\n",
-    "    - 클래스, 코드\n",
+    "    - 문장 길이가 길지 않는 데, 길게 해야 하는건가??\n",
     "    - accuracy가 나오지 않는 데, 구문이 완성되는 것이 신기했음..    \n",
     "    - 이것의 평가지표는 accuracy인가? 아님 그냥 이것도 인간이 판단하는 건가?\n",
     "    - 어떤 것을 변경해야지 좋아지는 것인지 아직 애매해다...\n",
